--- a/css/styles - logical.css
+++ b/css/styles - logical.css
@@ -32,29 +32,48 @@
 
 :root{
     font-size:18px;
-    --gray30: #212121;
-    --gray20: #212419;
-    --gray10: #616161;  
-    direction: rtl;  
+    --White30: white;
+    --White20: #A5A3A5;
+    --White10: #3a3539;  
+     
 }
 
 
 
 body{
     
-    color:var(--gray30);
-    font-family: 'Roboto', sans-serif;
+    color:var(--White30);
+    font-family: 'Nunito', sans-serif;
+    background: #251f24;
+    margin: 0;
 }
 a{
-    color: var(--gray30);
-}
-header{
-    font-size: 14px;
-    color: #616161;
+    color: var(--White30);
 }
 
+.header{
+    
+    
+    
+
+}
+.header-content {
+    padding-inline:20px;
+    
+
+}
+header{
+    margin-block-start: 20px;
+    font-size: 14px;
+    color: var(--white30);
+}
+
+header li{
+    color: var(--White20);
+    margin-block-end: 16px;
+}
 header a{
-    color: var(--gray10);
+    color: var(--White20);
     text-decoration: none;
 }
 header a:hover{
@@ -65,26 +84,58 @@ nav details summary{
     font-weight:bold ;
 }
 
+h1, h2, h3{
+    font-weight: normal;
+}
+
+hr{
+    margin-block: 40px;
+    border-color: rgba(97,97,97,0.2);
+}
+
 h1{
     /*font-size: 60px;*/
-    font-size:60px ;
+    font-size:40px ;
+    margin-block-start: 64px;
+    margin-block-start: 20px;
+    margin-block-end: 16px;
+    
 }
 h2{
     font-size: 2em;
+    margin-block: 40px;
 }
 
 h3{
     font-size: 1.5em;
+    font-weight: 600;
+    margin-block:16px;
+}
+p{
+    color:var(--White20);
+
 }
 
 pre{
-    background: #FEC62E;
+    background: var(--White10);
+    padding:40px;
+    border-radius: 8px;
+    border: 10px solid #5551FF;
+    box-shadow: -10px 10px 0 0 #ABAAF6;
+    margin-block-end: 30px;
 }
 .hero{
-    background-image:linear-gradient(to top, rgba(255,255,255,.3), transparent), url(../images/patron-1.png);
-    height: 350px;
-}
+    background-image:linear-gradient(96.07deg, #314755 30.63%, #26A0DA 102.18%);
+    block-size: 50px;
 
+}
+.section-content img{
+    margin-block-start: 40px;
+    display: block;
+    max-inline-size: 100%;
+    
+
+}
 .section-content h3{
     counter-increment: titleList;
 }
@@ -93,7 +144,7 @@ pre{
 }
 
 .section-content h3::before{
-    content: counter(titleList);
+    content: counter(titleList, decimal)'. ';
 }
 
 .section-content h3::after{
@@ -103,6 +154,112 @@ pre{
     background: var(--gray30);
     display: inline-block
 }
+
+blockquote{
+    
+    margin-block-start: 80px;
+    margin-block-end:83px;
+    background-color:var(--White10);
+    border-radius:8px;
+}
+.main hr{
+    display:none;
+}
+
+ 
+
+
+.wrapper{
+    max-inline-size: 902px;
+    block-size: 100px;
+    margin:auto;
+}
+
+.form input{
+    width: 100%;
+    border: 1px solid var(--White30);
+    background: var(--White10);
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding-inline: 16px;
+    padding-block: 12px;
+    color:var(--White30);
+    font-size: 16px;
+    display: block;
+    margin-block-end:24px;
+}
+
+.form input::-webkit-input-placeholder{
+    color: var(--White30);
+}
+.form input[type="submit"]{
+    background: #157efb;
+    border:none;
+}
+.slider-container{
+    
+    display: block;
+    overflow: auto;
+    scroll-behavior: smooth;
+    white-space: nowrap;
+    font-size: 0;
+}
+
+.slider-bullet-list{
+    text-align: center;
+    margin-block-start: 10px;
+}
+.slider-bullet{
+    display: inline-block;
+    inline-size: 15px;
+    block-size: 15px;
+    background: white;
+    border-radius: 50%;
+}
+
+.video{
+    margin: 0;
+    
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+}
+
+@media screen and (min-width:1366px) {
+    h1{
+        font-size:60px ;
+        margin-block-start: 64px;
+    }
+    .hero{
+        block-size: 352px;
+    }
+     .header {
+        position: sticky;
+        inset-block-start: -45px;
+        
+    
+    }
+    .header-content {
+        position: relative;
+        inset-block-start: 65px;
+        padding:0;
+    
+    }
+    header{
+        position: absolute;
+        inset-block-start: 0;
+        inset-inline-start: -208px;
+        inline-size: 188px;
+        
+    }
+        
+}
+    
+
+
+ 
+
 
 
 
